# raytracing-course

./: README.md  sample.txt
hw1/: .gitignore  CMakeLists.txt
hw1/include/: color.h  point.h  primitives.h  quaternion.h  scene.h
hw1/src/: color.cpp  main.cpp  point.cpp  primitives.cpp  quaternion.cpp  scene.cpp
hw2/: CMakeLists.txt  run.sh
hw2/include/: color.h  lights.h  point.h  primitives.h  quaternion.h  scene.h
hw2/src/: color.cpp  lights.cpp  point.cpp  primitives.cpp  scene.cpp
hw3/: CMakeLists.txt  run.sh  sample6.txt
hw3/include/: color.h  materials.h  primitives.h  scene.h
hw3/src/: main.cpp  scene.cpp
hw4/: .gitignore  CMakeLists.txt  run.sh
hw4/include/: distributions.h  primitives.h  quaternion.h  scene.h
hw4/src/: color.cpp  distributions.cpp  main.cpp  primitives.cpp  quaternion.cpp  scene.cpp
hw5/: CMakeLists.txt  practice5_1.txt  run.sh
hw5/include/: bvh.h  color.h  distributions.h  materials.h  primitives.h  scene.h
hw5/src/: bvh.cpp  distributions.cpp  main.cpp  primitives.cpp  scene.cpp  sceneload.cpp
